--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="body">
    <header>
     <!-- logo, name, nav bar -->
+    <div class="logo">
+        <img src="pics/gilbeys.jpg" width="50px" height="50px">
+        <h1 class="title">Pauline's Corner</h1>
+    </div>
+    <nav class="navbar">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
+
    </header>
-   <section>
-    <!-- slideshow of my works  -->
-   </section>
     <main>
         <!--  links to my blog posts -->
     </main>
